--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/content/content.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/content/content.component.html
@@ -16,8 +16,6 @@
   </div>
   <div class="action">
     <button mat-stroked-button color="primary" matStepperPrevious>Volver atrás</button>
-    <button mat-flat-button color="primary" (click)="obtenerValores()" matStepperNext>
-      Continuar
-    </button>
+    <button mat-flat-button color="primary" (click)="sendValue()" matStepperNext>Continuar</button>
   </div>
 </div>
