--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/date/date.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/date/date.component.html
@@ -1,4 +1,4 @@
-<!-- <form [formGroup]="form">
+<form [formGroup]="form">
   <div class="wrapper">
     <div class="container-date">
       <p>Fecha de publicación y vencimiento</p>
@@ -37,11 +37,11 @@
         <bdc-bo-hour-picker
           formControlName="hourFrom"
           [period]="'Desde'"
-          formControlName="hour"></bdc-bo-hour-picker>
-         <bdc-bo-hour-picker
+          formControlName="hourFrom"></bdc-bo-hour-picker>
+        <bdc-bo-hour-picker
           formControlName="hourTo"
           [period]="'Hasta'"
-          formControlName="hour"></bdc-bo-hour-picker> 
+          formControlName="hourTo"></bdc-bo-hour-picker>
       </div>
     </div>
   </div>
@@ -51,8 +51,9 @@
       mat-flat-button
       color="primary"
       matStepperNext
+      (click)="sendValue()"
       [routerLink]="['/dashboard/listado-de-preguntas/crear-pregunta/vista-previa']">
       Continuar
     </button>
   </div>
-</form> -->
+</form>
