--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/question-summary/question-summary.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/question-summary/question-summary.component.html
@@ -1,7 +1,6 @@
 <div class="wrapper">
   <h1>Revisá que esté todo bien</h1>
   <ng-container *ngIf="preview">
-    <p>{{ preview | json }}</p>
     <div class="preview-question">
       <h2 class="preview-question__title">{{ preview.question }}</h2>
       <div class="preview-question__category">
@@ -13,15 +12,15 @@
       </div>
       <div class="preview-question__date">
         <span class="material-symbols-outlined">today</span>
-        <span>17/NOV/2022</span>
+        <span>{{ preview.dateFrom | date: 'dd/MM/yy' }}</span>
         -
-        <span>17/DIC/2022</span>
+        <span>{{ preview.dateTo | date: 'dd/MM/yy' }}</span>
       </div>
       <div class="preview-question__date">
         <span class="material-symbols-outlined">schedule</span>
-        <span>07:00 AM</span>
+        <span>{{ preview.hourFrom }}</span>
         -
-        <span>07:00 PM ARG</span>
+        <span>{{ preview.hourTo }}</span>
       </div>
       <hr />
       <div class="preview-question__response-data">
@@ -45,9 +44,9 @@
       <div class="preview-question__response-data">
         <h5>Preguntas Relacionadas</h5>
         <div class="preview-question__response-data--related-questions">
-          <span>¿Dónde veo el estado de mi compra?</span>
-          <span>Consultá sobre tu factura y tus consumos</span>
-          <span>¿Cómo puedo acceder a mi factura?</span>
+          <ng-container *ngFor="let item of preview.associatedQuestions">
+            <span>{{ item }}</span>
+          </ng-container>
         </div>
       </div>
       <hr />
