style fix to back arrow btn, fixes in detail category, and add button 'crear'

--- a/src/app/views/dashboard/dashboard-views/dashboard-categories/detail-category/dashboard-detail-categories.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-categories/detail-category/dashboard-detail-categories.component.html
@@ -13,7 +13,12 @@
       </div>
     </div>
 
-    <h4>Subcategorías</h4>
+    <div class="subcategory-header">
+      <h4>Subcategorías</h4>
+      <button mat-flat-button color="primary">
+        <mat-icon class="material-symbols-outlined">add</mat-icon>Crear
+      </button>
+    </div>
     <ng-container *ngIf="category.subcategories.length > 0; else noSubcategories">
       <mat-accordion>
         <mat-expansion-panel
