avances de programar hora

--- a/src/app/shared/hour-picker/hour-picker.component.html
+++ b/src/app/shared/hour-picker/hour-picker.component.html
@@ -1,5 +1,5 @@
 <mat-form-field appearance="outline">
-  <mat-label>{{ period }}</mat-label>
+  <mat-label> Hora </mat-label>
   <input
     [formControl]="periodControl"
     id="period"
