--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/date/date.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/date/date.component.scss
@@ -1,31 +1,39 @@
 .wrapper {
   display: flex;
   padding-top: 70px;
-  p {
-    font-size: 16px;
-    font-weight: 500;
+  width: 100%;
+  flex-direction: column;
+  h5 {
+    margin-bottom: 40px;
   }
 
-  .container-date {
-    width: 50%;
-    .date {
-      display: flex;
-      mat-form-field {
-        width: 168px;
-        padding-right: 20px;
+  .container-select {
+    border-radius: 4px;
+    border: 1px solid #dbdbdb;
+    padding: 10px 15px;
+    margin-bottom: 10px;
+    transition: height 0.5s ease;
+    &.open {
+      height: 100%;
+      opacity: 1;
+    }
+    h5 {
+      margin-bottom: 0;
+    }
+    .container-content {
+      opacity: 0;
+      height: 0;
+      // transition: opacity 0.5s ease;
+      &.open {
+        opacity: 1;
+        height: 100%;
       }
     }
   }
-  mat-hint {
-    font-size: 12px;
-    color: #73777f;
+
+  .action {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 40px;
   }
-}
-.action {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 40px;
-}
-bdc-bo-hour-picker {
-  width: 168px;
 }
