--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -42,6 +42,11 @@ h4 {
   font-weight: 400;
   margin: 0;
 }
+h5{
+  font-size: 16px;
+  font-weight: 500;
+  margin: 0;
+}
 .container {
   width: 100%;
   padding: 0 15px;
