--- a/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/content/content.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/create-question/content/content.component.scss
@@ -15,6 +15,10 @@
       color: #73777f;
     }
   }
+  textarea{
+    resize: none;
+
+  }
   .action {
     display: flex;
     justify-content: space-between;
