--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/table/table-synonyms.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/table/table-synonyms.component.html
@@ -2,7 +2,12 @@
   <div class="wrapper">
     <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="position">
-        <th width="30%" mat-header-cell *matHeaderCellDef>Origen</th>
+        <th width="30%" mat-header-cell *matHeaderCellDef>
+          <div class="align-items">
+            Origen
+            <img (click)="handleOrder()" src="../../../../../../assets/img/order.png" alt="" />
+          </div>
+        </th>
         <td mat-cell *matCellDef="let element" class="text-blue">{{ element.word }}</td>
       </ng-container>
       <ng-container matColumnDef="name">
