--- a/src/app/views/dashboard/dashboard-views/dashboard-synonyms/table/table-synonyms.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-synonyms/table/table-synonyms.component.scss
@@ -5,6 +5,14 @@
       font-size: 14px;
       font-weight: 600;
       letter-spacing: 0.1;
+      .align-items{
+        display: flex;
+        align-items: center;
+        img{
+          padding-left: 5px;
+          cursor: pointer;
+        }
+      }
     }
     td {
       color: #999999;
