--- a/src/app/views/dashboard/dashboard-views/dashboard-question/menu-filter/menu-filter.component.scss
+++ b/src/app/views/dashboard/dashboard-views/dashboard-question/menu-filter/menu-filter.component.scss
@@ -1,33 +1,42 @@
 .wrapper {
   padding: 32px 20px;
   width: 380px;
+
   form {
     width: 100%;
   }
-  .action {
-    display: flex;
-    justify-content: end;
+}
+.action {
+  display: flex;
+  justify-content: end;
 
-    button:first-child {
-      margin-right: 20px;
-    }
-  }
-  .date-p {
-    font-size: 16px;
-    font-weight: 500;
-    margin-bottom: 16px;
-  }
-  mat-form-field {
-    width: 100%;
-    margin-bottom: 16px;
-    color: #73777f;
-    font-size: 16px !important;
-    mat-select {
-      text-transform: capitalize;
-    }
-  }
-  mat-hint {
-    font-size: 12px;
-    color: #73777f;
+  button:first-child {
+    margin-right: 20px;
   }
 }
+.date-p {
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 16px;
+}
+mat-form-field {
+  width: 100%;
+  margin-bottom: 16px;
+  color: #73777f;
+  font-size: 16px !important;
+  mat-select {
+    text-transform: capitalize;
+  }
+}
+mat-hint {
+  font-size: 12px;
+  color: #73777f;
+}
+
+::ng-deep {
+  .mat-mdc-option.mdc-list-item {
+    align-items: center;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
