--- a/src/app/views/dashboard/dashboard-views/dashboard-users/table-users/table-users.component.html
+++ b/src/app/views/dashboard/dashboard-views/dashboard-users/table-users/table-users.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="users.length > 0; else noUsers">
+<ng-container *ngIf="users; else noUsers">
   <div class="wrapper">
     <table
       mat-table
@@ -12,29 +12,31 @@
           <span>Nombre y apellido</span>
         </th>
         <td mat-cell *matCellDef="let element" class="username">
-          {{ element.userName }}
+          {{ element.first_name }} {{ element.last_name }}
         </td>
       </ng-container>
       <ng-container matColumnDef="userEmail">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.userEmail }}
+          {{ element.email }}
         </td>
       </ng-container>
       <ng-container matColumnDef="lastLogin">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Último login</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.lastLogin | date: 'd MMM, y, h:mm' }}
+          {{ element.last_login | date: 'd MMM, y, h:mm' }}
         </td>
       </ng-container>
       <ng-container matColumnDef="userClients">
         <th mat-header-cell *matHeaderCellDef>Clientes habilitados</th>
-        <td mat-cell *matCellDef="let element"></td>
+        <td mat-cell *matCellDef="let element">
+          {{ element.client }}
+        </td>
       </ng-container>
       <ng-container matColumnDef="role">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Rol</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.role }}
+          {{ element.roles.name }}
         </td>
       </ng-container>
       <ng-container matColumnDef="seeMore">
