--- a/src/app/shared/multiselect/multiselect.component.scss
+++ b/src/app/shared/multiselect/multiselect.component.scss
@@ -5,9 +5,7 @@
 
       .mdc-form-field {
         padding: 5px 10px;
-        display: flex !important;
-        flex-direction: row-reverse !important;
-        justify-content: space-between !important;
+        width: 100%;
         transition: background-color 0.3s ease-in-out;
 
         &:hover {
